--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,45 @@
     border: 1px solid#f2f2f2;
     color:#5F6368;
     font-size: 14px;
-    padding: 8px;
-    border-radius: 5%;    
+    padding: 12px;
+    border-radius: 5%;
+    margin: 5px;    
 }
+
+.main-content{
+    position: fixed;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content>div{
+    padding: 15px;
+
+}
+
+.buttons-container{
+    justify-content: center;
+}
+
+.search-field{
+    border: 1px solid#f2f2f2;
+    border-radius: 15px;
+    width: 500px;
+    font-size: 16px;
+    padding: 10px;
+}
+
+
+.google-logo{
+    padding-bottom: 20px;
+}
+
+.google-logo img{
+    width: 310px;
+    height: auto;
+}
+
 
