--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,15 @@
     padding: 12px;
     border-radius: 5%;
     margin: 5px;   
-    font-family: arial,sans-serif; 
+    font-family: arial,sans-serif;
+    width: auto;
+    height: 40px;
+}
+
+.search-button:hover {
+    cursor: pointer;
+    box-shadow: 0px 1px 0.1px #c5c5c5;
+    border: 0.75px solid #cacaca;
 }
 
 .main-content{
