--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,9 @@
 
 .search-button:hover {
     cursor: pointer;
-    box-shadow: 0px 1px 0.1px #c5c5c5;
-    border: 0.75px solid #cacaca;
+    box-shadow: 0px 0.5px 0.7px #b3b3b3;
+    border: 0.7px solid #e0e0e0;
+    color: black;
 }
 
 .main-content{
