--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
     box-shadow: 0px 0.5px 0.7px #b3b3b3;
     border: 0.7px solid #e0e0e0;
     color: black;
+    background-image: linear-gradient(to bottom, rgba(242,242,242,0), rgba(242, 242, 242, 0.5));
 }
 
 .main-content{
