--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,10 @@
 }
 
 .main-content{
+    padding-top: 50px;
     position: fixed;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 20%;
+    left: 35%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,6 +69,33 @@
     width: 270px;
     height: auto;
 }
+
+.navbar{
+    list-style-type: none;
+    padding-bottom: 100px;
+    margin: 0;
+    
+}
+
+.nav-left{
+    float: left;
+    padding-top: 24px;
+    padding-left: 23px;
+    padding-right: 5px
+}
+
+.nav-right{
+    float: right;
+    padding-top: 24px;
+    padding-right: 23px;
+    padding-left: 5px
+}
+
+.nav-right img{
+    display: inline;
+}
+
+
 
 
 
