--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    min-width: 1115px;
 }
 
 .buttons-container{
@@ -50,19 +51,17 @@
     border: 1px solid#f2f2f2;
     border-radius: 50px;
     box-shadow: 0px 2px 6px 1px #cfcfcfb3;
-    width: 550px;
     padding-left: 17px;
     padding-right: 8px;
     padding-bottom: 5px;
     padding-top: 5px;
-    
+    text-align: center; 
 }
 
 
 .google-logo{
     padding-bottom: 20px;
     text-align: center;
-
 }
 
 .google-logo img{
@@ -74,25 +73,39 @@
     list-style-type: none;
     padding-bottom: 100px;
     margin: 0;
-    
+    position: relative;
+    min-width: 1150px;
 }
 
 .nav-left{
     float: left;
     padding-top: 24px;
-    padding-left: 23px;
-    padding-right: 5px
+    padding-left: 26px;
+    padding-right: 0px;
+    position: sticky;
 }
 
 .nav-right{
     float: right;
     padding-top: 24px;
     padding-right: 23px;
-    padding-left: 5px
+    padding-left: 5px;
+    position: sticky;
 }
 
 .nav-right img{
     display: inline;
+}
+
+.navbar a{
+    text-decoration: none;
+    font-family: arial,sans-serif; 
+    font-size: 14px;
+    color: #000000a3;
+}
+
+.navbar a:hover{
+    text-decoration: underline;
 }
 
 
