--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@
     flex-direction: column;
     justify-content: center;
     min-width: 1115px;
+    width: 100%;
+    text-align: center;
 }
 
 .buttons-container{
@@ -40,7 +42,9 @@
     margin: 10px;
     border: 0px;
     font-family: arial,sans-serif;
-    width: 31.5rem;
+    float: left;
+    width: 90%;
+    
 }
 
 .search-field:focus{
@@ -51,11 +55,15 @@
     border: 1px solid#f2f2f2;
     border-radius: 50px;
     box-shadow: 0px 2px 6px 1px #cfcfcfb3;
-    padding-left: 17px;
-    padding-right: 8px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    text-align: center; 
+    display: inline-block; 
+    margin: 0 auto;
+    width: 550px;
+}
+
+.search-form i{
+    float: left;
+    padding-top: 0.75rem;
+    padding-left: 1rem;
 }
 
 
