Style sign-in button
If applied, this commit applies font, color and size properties to the sign-in button.
Custom padding-top is also applied to the parent list element.

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,20 @@
     margin-bottom: 100px;
 }
 
+.button button{
+    border: 1px solid #4285f4;
+    border-radius: 2px;
+    background-color: #4285f4;
+    font-weight: bold;
+    color: white;
+    height: 1.8rem;
+    width: 4rem;
+}
+
+.button {
+    padding-top: 18px;
+}
+
 .nav-left a{
     text-decoration: none;
     font-family: arial,sans-serif; 
@@ -122,6 +136,8 @@
 .navbar a:hover{
     text-decoration: underline;
 }
+
+
 
 
 
