--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,15 @@
     box-shadow: 0 1px #80808029;
 }
 
+.button button:focus{
+    outline: none;
+}
+
+.button button:active{
+    background-color: #3c7ae4;
+    border-color: #3c7ae4;
+}
+
 .nav-left a{
     text-decoration: none;
     font-family: arial,sans-serif; 
