--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     width: 100%;
     min-width: 1150px;
     text-align: center;
+    margin-top: 50px;
 }
 
 .grid i{
@@ -66,6 +67,7 @@
     float: left;
     padding-top: 0.75rem;
     padding-left: 1rem;
+    color: #80808087;
 }
 
 
@@ -148,6 +150,39 @@
 
 .navbar a:hover{
     text-decoration: underline;
+}
+
+#footer-nav{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    max-height: 40px;
+    background-color: #f2f2f2;
+    color: #cfcfcfb3;
+    text-align: center;
+    border-top: 1px solid #81818126;
+    min-width: 1105px;
+}
+
+#footer-nav a{
+    color: #818181;
+}
+
+#footer-nav a:hover{
+    text-decoration: underline;
+}
+
+#footer-nav .nav-left{
+    padding-top: 11px;
+    padding-left: 23px;
+    padding-right: 5px;
+}
+
+#footer-nav .nav-right{
+    padding-top: 11px;
+    padding-left: 5px;
+    padding-right: 23px;
 }
 
 
