Style mic and add placeholder
If applied, this commit adds a placeholder to the search input field
and changes the cursor to point while hovering on the google mic icon.

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,10 @@
     outline-color: white;
 }
 
+.search-field:focus::placeholder{
+    color: transparent;
+}
+
 .search-form{
     border: 1px solid#f2f2f2;
     border-radius: 50px;
@@ -78,6 +82,9 @@
     width: 25px;
 }
 
+.search-form img:hover{
+    cursor: pointer;
+}
 
 .google-logo{
     padding-bottom: 20px;
