--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ input.search-field:focus::placeholder{
     color: white;
     height: 1.8rem;
     width: 4rem;
+    font-family: arial, sans-serif;
 }
 
 .button {
